--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka&family=Fredoka+One&family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka&family=Fredoka+One&family=Pacifico&family=Pangolin&display=swap");
+
+:root {
+  --brown: #4c2719;
+  --yellow: #ede580;
+  --cinabre: #d81702;
+  --red: #d35269;
+  --beige: rgba(255, 224, 181, 0.8);
+  --white: #ffffff;
+  --green: #a4af69;
+  --font-color: #000000;
+  --second-font-color: #ffffff;
+  --text-spacing: 1rem;
+  --imagery-spacing: 1vw;
+  --relative-spacing: 1%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body,
+button,
+select,
+input {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  min-width: 100%;
+  font-size: medium;
+  font-family: "Pangolin", cursive;
+  opacity: 1;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: column nowrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
 }
