--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-}
-
 .bigButton {
   height: 7rem;
   width: 19rem;
@@ -13,17 +9,15 @@ body {
   justify-content: center;
   align-items: center;
   color: black;
+  text-decoration: none;
+  margin-top: 15rem;
 }
 
 .bigButton:hover {
   cursor: pointer;
 }
 
-.smallButton {
-  height: 3.5rem;
-  width: 11rem;
-  border-radius: 54.5px;
-  background-color: var(--beige);
-  font-size: 1.5rem;
-  opacity: 0.8;
+.logoHome {
+  width: 10rem;
+  margin: 5rem 10rem 0rem 20rem;
 }
