--- a/src/styles/Regles.css
+++ b/src/styles/Regles.css
@@ -1,15 +1,37 @@
-div > h2 {
-  margin: calc(var(--text-spacing) * 6.75) 0 calc(var(--text-spacing) * 1.25) 0;
-  display: flex;
-  justify-content: center;
-  flex-flow: row nowrap;
-  align-items: center;
-  background-color: var(--beige);
+.instructions {
+  width: clamp(
+    calc(var(--text-spacing) * 19),
+    50%,
+    calc(var(--text-spacing) * 40)
+  );
   border-radius: 54.5px;
-  font-size: calc(var(--text-spacing) * 2.5);
+  background-color: var(--beige);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.instructions h3 {
+  margin: calc(var(--text-spacing) * 0.4) 0 var(--text-spacing) 0;
+  padding: calc(var(--text-spacing) * 0.2) var(--text-spacing) 0
+    var(--text-spacing);
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  font-size: calc(var(--text-spacing) * 2.2);
   color: var(--brown);
-  opacity: 1;
-  padding: 1rem 2rem;
+}
+
+.instructions p {
+  font-size: calc(var(--text-spacing) * 1.1);
+  padding: 0 calc(var(--text-spacing) * 3.5) 0 calc(var(--text-spacing) * 3.5);
+  text-align: center;
+}
+
+.instructionsLiens {
+  display: flex;
+  flex-direction: row;
 }
 
 .jouer {
@@ -28,41 +50,6 @@ div > h2 {
   height: 80px;
 }
 
-/* div:nth-child(2) {
-  padding: calc(var(--imagery-spacing) * 2) 0 calc(var(--imagery-spacing) * 2) 0;
-} */
-
-div > div > h3 {
-  margin: calc(var(--text-spacing) * 0.4) 0 var(--text-spacing) 0;
-  padding: calc(var(--text-spacing) * 0.2) var(--text-spacing) 0
-    var(--text-spacing);
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-start;
-  font-size: calc(var(--text-spacing) * 2.2);
-  color: var(--brown);
-}
-
-.instructions {
-  width: clamp(
-    calc(var(--text-spacing) * 19),
-    50%,
-    calc(var(--text-spacing) * 40)
-  );
-  border-radius: 54.5px;
-  background-color: var(--beige);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-div > div > p {
-  font-size: calc(var(--text-spacing) * 1.1);
-  padding: 0 calc(var(--text-spacing) * 3.5) 0 calc(var(--text-spacing) * 3.5);
-  text-align: center;
-}
-
 @media screen and (min-width: 568px) {
   .instructions {
     width: clamp(
@@ -72,7 +59,7 @@ div > div > p {
     );
   }
 
-  div > div > p {
+  .instructions p {
     font-size: calc(var(--text-spacing) * 1.2);
   }
 }
@@ -86,7 +73,7 @@ div > div > p {
     );
   }
 
-  div > div > p {
+  .instructions p {
     font-size: calc(var(--text-spacing) * 1.3);
   }
 }
@@ -100,7 +87,7 @@ div > div > p {
     );
   }
 
-  div > div > p {
+  .instructions p {
     font-size: calc(var(--text-spacing) * 1.4);
   }
 }
