--- a/src/styles/Themes.css
+++ b/src/styles/Themes.css
@@ -1,7 +1,44 @@
-@media screen and (max-width: 576px) { /* version mobile */
-  .displayAccordeon{
-    margin-top: 100px;
-  }
+.displayAccordeon{
+  margin-top: 100px;
+}
+
+.dropdown {
+  gap: 0.5rem;
+}
+
+.drop {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+button {
+  align-items: center;
+  padding: 0.5rem;
+  border: none;
+}
+
+.thematique {
+  background-color: var(--beige);
+  border-radius: 10px;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 600;
+  padding: 1rem 0;
+}
+
+select {
+  padding: calc(var(--text-spacing) * 1.25);
+  width: clamp(
+    calc(var(--text-spacing) * 16),
+    calc(var(--imagery-spacing) * 90),
+    (var(--text-spacing) * 32)
+  );
+  border-radius: 13.62px;
+  background-color: var(--white);
+  color: var(--brown);
+  font-size: medium;
+  outline: none;
+  border: none;
 }
 
 @media screen and (min-width: 768px) { /* version tablette & desktop */
